css/careers-form.css
.job-info {
  background-color: #eeeeee;
  padding-bottom: 1.5rem;
  padding-top:.5rem;
  display: flex;
  display: -webkit-flex;
  flex-flow: column wrap;
  -webkit-flex-flow: column wrap;
  justify-content: center;
  -webkit-justify-content: center;
  align-items: center;
  -webkit-align-items: center;
  align-content: center;
  -webkit-align-content: center;
}

.job-info-description {
  text-align: center;
}

.job-form {
  display: flex;
  display: -webkit-flex;
  flex-flow: column wrap;
  -webkit-flex-flow: column wrap;
  justify-content: center;
  -webkit-justify-content: center;
  align-items: center;
  -webkit-align-items: center;
  align-content: center;
  -webkit-align-content: center;
}

input[type=text], select {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
}

input[type=submit] {
  background-color: #00f596;;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;

